--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,6 @@ executors:
   pulumi:
     docker:
       - image: circleci/node:14
-
 jobs:
   build-native-mac:
     macos:
@@ -29,7 +28,7 @@ jobs:
       - run:
           command: npm config set '//registry.npmjs.org/:_authToken' "${NPM_TOKEN}"
       - run: sudo apt-get install libudev-dev libusb-dev libusb-1.0 snapd
-      - run: sudo snap install snapcraft --classic
+      - run: sudo snap install core
       - run: node --version
       - run: npm i
 #     - run: npm run fix
