--- a/package.json
+++ b/package.json
@@ -27,45 +27,45 @@
     "@bithighlander/hdwallet-keepkey": "^1.10.14",
     "@chenfengyuan/vue-qrcode": "^1.0.2",
     "@peculiar/webcrypto": "^1.1.4",
-    "@pioneer-platform/eth-crypto": "^8.1.5",
-    "@pioneer-platform/loggerdog": "^8.1.5",
-    "@pioneer-platform/pioneer-app": "^8.1.5",
-    "@pioneer-platform/pioneer-client": "^8.1.5",
-    "@pioneer-platform/pioneer-config": "^8.1.5",
-    "@pioneer-platform/pioneer-events": "^8.1.5",
-    "@pioneer-platform/pioneer-hardware": "^8.1.5",
-    "@quasar/extras": "^1.10.4",
+    "@pioneer-platform/eth-crypto": "latest",
+    "@pioneer-platform/loggerdog": "latest",
+    "@pioneer-platform/pioneer-app": "latest",
+    "@pioneer-platform/pioneer-client": "latest",
+    "@pioneer-platform/pioneer-config": "latest",
+    "@pioneer-platform/pioneer-events": "latest",
+    "@pioneer-platform/pioneer-hardware": "latest",
+    "@quasar/extras": "^1.10.8",
     "animated-number-vue": "^1.0.0",
     "app-root-dir": "^1.0.2",
     "axios": "^0.18.1",
     "bcryptjs": "^2.4.3",
     "bip39": "^3.0.4",
     "chalk": "^4.1.1",
-    "core-js": "^3.13.0",
+    "core-js": "^3.15.2",
     "countup.js": "^2.0.7",
     "electron-log": "^4.3.4",
     "figlet": "^1.5.0",
     "generate-password": "^1.6.0",
     "identicon.js": "^2.3.3",
     "loadtest": "^5.1.2",
-    "menubar": "^9.0.4",
+    "menubar": "^9.0.5",
     "module-alias": "^2.2.2",
-    "quasar": "^1.15.13",
+    "quasar": "^1.15.21",
     "unique-names-generator": "^4.3.1",
     "uuid": "^8.3.2",
     "vue-grid-layout": "^2.3.12",
-    "vue-i18n": "^8.24.4",
+    "vue-i18n": "^8.24.5",
     "vue-moment": "^4.1.0",
     "vue-native-websocket": "^2.0.14",
     "vue-numerals": "^4.0.5",
     "vue2-transitions": "^0.3.0"
   },
   "devDependencies": {
-    "@quasar/app": "^2.2.6",
+    "@quasar/app": "^2.2.10",
     "babel-eslint": "^10.0.1",
     "devtron": "^1.4.0",
     "electron": "^9.4.4",
-    "electron-builder": "^22.9.1",
+    "electron-builder": "^22.11.7",
     "electron-debug": "^3.2.0",
     "electron-devtools-installer": "^3.2.0",
     "electron-packager": "^14.2.1",
