--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "url": "https://github.com/bithighlander/pioneer-desktop"
   },
   "scripts": {
-    "npm": "npm i",
+    "version": "node --version",
+    "yarn": "yarn",
     "quasar-clean": "quasar clean",
     "clean": "rm -rf node_modules dist",
     "npm-upgrade": "npm upgrade",
@@ -30,6 +31,7 @@
     "@pioneer-platform/eth-crypto": "latest",
     "@pioneer-platform/loggerdog": "latest",
     "@pioneer-platform/pioneer-app": "latest",
+    "@pioneer-platform/pioneer-app-electron": "^8.1.26",
     "@pioneer-platform/pioneer-client": "latest",
     "@pioneer-platform/pioneer-config": "latest",
     "@pioneer-platform/pioneer-events": "latest",
@@ -43,7 +45,7 @@
     "chalk": "^4.1.1",
     "core-js": "^3.15.2",
     "countup.js": "^2.0.7",
-    "electron-log": "^4.3.4",
+    "electron-log": "^4.4.1",
     "figlet": "^1.5.0",
     "generate-password": "^1.6.0",
     "identicon.js": "^2.3.3",
