--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "@peculiar/webcrypto": "^1.1.4",
     "@pioneer-platform/eth-crypto": "latest",
     "@pioneer-platform/loggerdog": "latest",
-    "@pioneer-platform/pioneer-app": "latest",
-    "@pioneer-platform/pioneer-app-electron": "^8.1.26",
+    "@pioneer-platform/pioneer-app": "8.1.32",
+    "@pioneer-platform/pioneer-app-electron": "8.1.48",
     "@pioneer-platform/pioneer-client": "latest",
     "@pioneer-platform/pioneer-config": "latest",
     "@pioneer-platform/pioneer-events": "latest",
