--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clean": "rm -rf node_modules dist",
     "npm-upgrade": "npm upgrade",
     "lint": "eslint --ext .js,.vue ./",
-    "test": "echo \"No test specified\" && exit 0",
+    "test": "jest .",
     "dev": "quasar dev --mode electron",
     "publish:lerna": "lerna publish from-package --yes",
     "build": "quasar build",
@@ -30,13 +30,13 @@
     "@peculiar/webcrypto": "^1.1.4",
     "@pioneer-platform/eth-crypto": "latest",
     "@pioneer-platform/loggerdog": "latest",
-    "@pioneer-platform/pioneer-app": "8.1.32",
-    "@pioneer-platform/pioneer-app-electron": "8.1.49",
+    "@pioneer-platform/pioneer-app": "latest",
+    "@pioneer-platform/pioneer-app-electron": "latest",
     "@pioneer-platform/pioneer-client": "latest",
     "@pioneer-platform/pioneer-config": "latest",
     "@pioneer-platform/pioneer-events": "latest",
     "@pioneer-platform/pioneer-hardware": "latest",
-    "@pioneer-platform/pioneer-sdk": "8.1.39",
+    "@pioneer-platform/pioneer-sdk": "latest",
     "@quasar/extras": "^1.10.8",
     "animated-number-vue": "^1.0.0",
     "app-root-dir": "^1.0.2",
@@ -50,6 +50,7 @@
     "figlet": "^1.5.0",
     "generate-password": "^1.6.0",
     "identicon.js": "^2.3.3",
+    "jest": "^27.2.0",
     "loadtest": "^5.1.2",
     "menubar": "^9.0.5",
     "module-alias": "^2.2.2",
