--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pioneer-desktop",
-  "version": "8.1.12",
+  "version": "8.1.13",
   "private": true,
   "description": "A support application for the KeepKey Hardware Wallet",
   "productName": "pioneer-desktop",
@@ -18,10 +18,10 @@
     "test": "jest .",
     "dev": "quasar dev --mode electron",
     "publish:lerna": "lerna publish from-package --yes",
-    "build": "quasar build",
-    "build-electron-publish-mac": "quasar build -m electron --publish always --target mac --debug",
-    "build-electron-publish-linux": "quasar build -m electron --publish always --target linux --debug",
-    "build-electron-publish-windows": "quasar build -m electron --publish always --target win --debug",
+    "build": "quasar build -m electron --target mac --debug",
+    "build-electron-publish-mac": "quasar build -m electron --publish always --target mac",
+    "build-electron-publish-linux": "quasar build -m electron --publish always --target linux",
+    "build-electron-publish-windows": "quasar build -m electron --publish always --target win",
     "fix": "./node_modules/.bin/electron-builder install-app-deps"
   },
   "dependencies": {
@@ -40,12 +40,14 @@
     "@quasar/extras": "^1.10.8",
     "animated-number-vue": "^1.0.0",
     "app-root-dir": "^1.0.2",
+    "assert": "^2.0.0",
     "axios": "^0.18.1",
     "bcryptjs": "^2.4.3",
     "bip39": "^3.0.4",
     "chalk": "^4.1.1",
     "core-js": "^3.15.2",
     "countup.js": "^2.0.7",
+    "download-github-release": "^0.3.2",
     "electron-log": "^4.4.1",
     "figlet": "^1.5.0",
     "generate-password": "^1.6.0",
@@ -55,6 +57,7 @@
     "menubar": "^9.0.5",
     "module-alias": "^2.2.2",
     "quasar": "^1.15.21",
+    "spectron": "^15.0.0",
     "unique-names-generator": "^4.3.1",
     "uuid": "^8.3.2",
     "vue-grid-layout": "^2.3.12",
