--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,8 @@ jobs:
       - run: quasar --version
       - run: npm i
       - run: GH_TOKEN=$GH_TOKEN npm run build-electron-publish-mac
+      - run: npm run test
+
   build-native-linux:
     executor: pulumi
     steps:
@@ -84,3 +86,4 @@ workflows:
       - build-native-mac
       - build-native-windows
       - build-native-linux
+      -
