--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
       - run: quasar --version
       - run: npm i
       - run: GH_TOKEN=$GH_TOKEN npm run build-electron-publish-mac
-      - run: npm run test
+#      - run: npm run test
 
   build-native-linux:
     executor: pulumi
