--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "yarn": "yarn",
     "quasar-clean": "quasar clean",
     "clean": "rm -rf node_modules dist",
-    "npm-upgrade": "npm upgrade",
+    "upgrade": "yarn upgrade",
     "lint": "eslint --ext .js,.vue ./",
     "test": "jest .",
     "dev": "quasar dev --mode electron",
@@ -25,7 +25,6 @@
     "fix": "./node_modules/.bin/electron-builder install-app-deps"
   },
   "dependencies": {
-    "@bithighlander/hdwallet-keepkey": "^1.10.14",
     "@chenfengyuan/vue-qrcode": "^1.0.2",
     "@peculiar/webcrypto": "^1.1.4",
     "@pioneer-platform/eth-crypto": "latest",
